--- a/mapview.css
+++ b/mapview.css
@@ -9,3 +9,22 @@
 .gm-style .gm-style-iw h2 {
     margin: 0 auto 10px;
 }
+
+#dialog{display:none;}
+#dialog.active{display:block;}
+.gm-style .gm-style-iw.active {
+    height: auto!important;
+    background: #fff;
+    width: 100%!important;
+    left: 0!important;
+    padding: 20px 10px 20px 10px!important;
+}
+
+.modal {
+    width: 50%!important;
+    left: 25%!important;
+    right: 25%!important;
+}
+.modal div:last-child {
+    right: -1px!important;
+}
